# id30

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: display_bench.rs  parse_bench.rs
src/: codec_tables.rs  diesel_support.rs  display.rs  from.rs  from_str.rs  id30_parse.rs  lib.rs  rand.rs  serde_support.rs
