[package]
name = "id30"
version = "1.0.0"
description = "An encoding scheme for 30 bit identifiers"
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"
documentation = "https://docs.rs/id30"
repository = "https://github.com/maghoff/id30"

[package.metadata.docs.rs]
features = ["diesel", "serde"]

[dependencies]
diesel2 = { package = "diesel", default-features = false, version = "2.0.0", optional = true, features = [
    "with-deprecated",
] }
rand08 = { package = "rand", version = "0.8", optional = true, default-features = false }
serde1 = { package = "serde", version = "1", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5.1"
diesel2 = { package = "diesel", version = "2.0.0", default-features = false, features = [
    "sqlite",
] }
libsqlite3-sys = { features = ["bundled"], version = ">=0.17.2" }
rand08 = { package = "rand", version = "0.8.5" }
serde1 = { package = "serde", version = "1", default-features = false }
serde_test1 = { package = "serde_test", version = "1" }

[features]
default = ["rand"]

rand08 = ["dep:rand08"]
rand_std = ["rand08/std", "rand08/std_rng"]
rand = ["rand08"]

diesel2 = ["dep:diesel2"]
diesel = ["diesel2"]

serde1 = ["dep:serde1"]
serde = ["serde1"]

unstable_portable_simd = []
unstable_stdarch_x86_avx512 = []

[[bin]]
name = "id30"
required-features = ["rand08", "rand_std"]

[[bench]]
name = "display_bench"
harness = false
required-features = ["rand08", "rand_std"]

[[bench]]
name = "parse_bench"
harness = false
required-features = ["rand08", "rand_std"]
